20231016 | HANDLED RESPONSE STRING

--- a/app/src/main/assets/video_call_layout.html
+++ b/app/src/main/assets/video_call_layout.html
@@ -40,7 +40,7 @@
     web.voiceMod = "";
     web.width = "500";
     web.createBox();
-    web.addMessage("", "", "", "");
+    web.addMessage("test", "", "", "");
     web.processMessages();
 
 
